--- a/package.json
+++ b/package.json
@@ -1,12 +1,31 @@
 {
-  "name": "rents",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "rents",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "rimraf dist && tsc",
+        "start": "rimraf dist && tsc && node dist"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/module-alias": "^2.0.1",
+        "@types/node": "^17.0.23",
+        "@typescript-eslint/eslint-plugin": "^4.0.1",
+        "eslint": "^7.12.1",
+        "eslint-config-standard-with-typescript": "^21.0.1",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.0.0",
+        "lint-staged": "^12.3.7",
+        "typescript": "^4.6.3"
+    },
+    "engines": {
+        "node": "16.x"
+    },
+    "dependencies": {
+        "rimraf": "^3.0.2"
+    }
 }
