--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "main": "index.js",
     "scripts": {
         "build": "rimraf dist && tsc",
-        "start": "rimraf dist && tsc && node dist"
+        "start": "node dist",
+        "dev": "ts-node-dev src/server.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/express": "^4.17.13",
         "@types/module-alias": "^2.0.1",
         "@types/node": "^17.0.23",
         "@typescript-eslint/eslint-plugin": "^4.0.1",
@@ -20,12 +22,14 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^5.0.0",
         "lint-staged": "^12.3.7",
+        "ts-node-dev": "^1.1.8",
         "typescript": "^4.6.3"
     },
     "engines": {
         "node": "16.x"
     },
     "dependencies": {
+        "express": "^4.18.0",
         "rimraf": "^3.0.2"
     }
 }
