--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "rimraf dist && tsc",
         "start": "node dist",
-        "dev": "ts-node-dev src/server.ts"
+        "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
     },
     "keywords": [],
     "author": "",
