--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/express": "^4.17.13",
         "@types/module-alias": "^2.0.1",
         "@types/node": "^17.0.23",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^4.0.1",
         "eslint": "^7.12.1",
         "eslint-config-standard-with-typescript": "^21.0.1",
@@ -30,6 +31,7 @@
     },
     "dependencies": {
         "express": "^4.18.0",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "uuid": "^8.3.2"
     }
 }
