--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
         "@strict-boolean-expressions": "off",
         "@typescript-eslint/space-before-function-paren": [
             "error"
-        ]
+        ],
+        "strict-boolean-expressions": "off"
     }
 }
