--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/module-alias": "^2.0.1",
+        "@types/multer": "^1.4.7",
         "@types/node": "^17.0.23",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^4.0.1",
@@ -31,6 +32,7 @@
     },
     "dependencies": {
         "express": "^4.18.0",
+        "multer": "^1.4.4",
         "rimraf": "^3.0.2",
         "uuid": "^8.3.2"
     }
