--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "node": "16.x"
     },
     "dependencies": {
+        "csv-parse": "^5.0.4",
         "express": "^4.18.0",
         "multer": "^1.4.4",
         "rimraf": "^3.0.2",
