--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/module-alias": "^2.0.1",
         "@types/multer": "^1.4.7",
         "@types/node": "^17.0.23",
+        "@types/swagger-ui-express": "^4.1.3",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^4.0.1",
         "eslint": "^7.12.1",
@@ -35,6 +36,7 @@
         "express": "^4.18.0",
         "multer": "^1.4.4",
         "rimraf": "^3.0.2",
+        "swagger-ui-express": "^4.3.0",
         "uuid": "^8.3.2"
     }
 }
